k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gin-api
  labels:
    name: gin-api
